create the info container

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
                 </div>
             </div>
         </header>
+        <div class="info">
+            <div class="title">SHERET:</div>
+            <div class="underline"></div>
+            <div class="subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
+        </div>
 
         <form id="uploadForm">
             <input type="file" id="fileInput" required>
