style the info container

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
             <div class="subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
         </div>
 
-        <form id="uploadForm">
+        <!-- <form id="uploadForm">
             <input type="file" id="fileInput" required>
             <button type="submit">Upload file</button>
         </form>
@@ -39,7 +39,7 @@
             <input type="text" id="codeInput" placeholder="CODE">
             <button type="submit">Download</button>
         </form>
-        <p id="message"></p>
+        <p id="message"></p> -->
     </div>
     <script src="./main.js"></script>
 </body>
