--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,20 @@
             <div class="underline"></div>
             <div class="subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
         </div>
+        <div class="forms">
+            <form id="uploadForm">
+                <input type="file" id="fileInput" required>
+                <button type="submit">Upload file</button>
+            </form>
+            <form id="downloadForm">
+                <input type="text" id="codeInput" placeholder="CODE">
+                <button type="submit">Download</button>
+                <p id="message"></p>
 
-        <!-- <form id="uploadForm">
-            <input type="file" id="fileInput" required>
-            <button type="submit">Upload file</button>
-        </form>
-        <form id="downloadForm">
-            <input type="text" id="codeInput" placeholder="CODE">
-            <button type="submit">Download</button>
-        </form>
-        <p id="message"></p> -->
+            </form>
+        </div>
+
+
     </div>
     <script src="./main.js"></script>
 </body>
