style the input type file with label

--- a/public/index.html
+++ b/public/index.html
@@ -33,15 +33,16 @@
         <div class="forms">
             <form id="uploadForm">
                 <input type="file" id="fileInput" required>
+                <label for="fileInput" class="custom-file-label">Choose File</label>
                 <button type="submit">Upload file</button>
             </form>
             <form id="downloadForm">
                 <input type="text" id="codeInput" placeholder="CODE">
                 <button type="submit">Download</button>
                 <p id="message"></p>
-
             </form>
         </div>
+        
 
 
     </div>
