show if any file is chosen in the input type: file, correct the 2-times chosing bug

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
             <form id="uploadForm">
                 <input type="file" id="fileInput" required>
                 <label for="fileInput" class="custom-file-label">Choose File</label>
+                <span id="fileName">No file chosen</span>
                 <button type="submit">Upload file</button>
             </form>
             <form id="downloadForm">
@@ -42,6 +43,7 @@
                 <p id="message"></p>
             </form>
         </div>
+        
         
 
 
