--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         <div class="forms">
             <form id="uploadForm">
                 <input type="file" id="fileInput" required>
-                <label for="fileInput" class="custom-file-label">Choose File</label>
+                <label for="fileInput" class="custom-file-label">+</label>
                 <span id="fileName">No file chosen</span>
                 <button type="submit">Upload file</button>
             </form>
