--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Audiowide:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Oxygen:300,regular,700" rel="stylesheet" />
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.css' integrity='sha512-U9Y1sGB3sLIpZm3ePcrKbXVhXlnQNcuwGQJ2WjPjnp6XHqVTdgIlbaDzJXJIAuCTp3y22t+nhI4B88F/5ldjFA==' crossorigin='anonymous'/>
 </head>
 <body>
     <div class="wrap">
@@ -38,6 +39,7 @@
                 <button type="submit">Upload file</button>
             </form>
             <form id="downloadForm">
+                <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
                 <input type="text" id="codeInput" placeholder="CODE">
                 <button type="submit">Download</button>
                 <p id="message"></p>
