add the forms titles

--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,16 @@
             <form id="uploadForm">
                 <input type="file" id="fileInput" required>
                 <label for="fileInput" class="custom-file-label">+</label>
+                <h3>Upload a file</h3>
                 <span id="fileName">No file chosen</span>
                 <button type="submit">Upload file</button>
             </form>
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
+                <h3>Save a file</h3>
+
                 <input type="text" id="codeInput" placeholder="CODE">
+
                 <button type="submit">Download</button>
                 <p id="message"></p>
             </form>
