fix the plus icon, replace it with i element and change the styles

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <div class="forms">
             <form id="uploadForm">
                 <input type="file" id="fileInput" required>
-                <label for="fileInput" class="custom-file-label">+</label>
+                <label for="fileInput" class="custom-file-label"><i class="fa-solid fa-plus plus"></i></label>
                 <h3>Upload a file</h3>
                 <span id="fileName">No file chosen</span>
                 <button type="submit">Upload file</button>
