add the file uploading text and keyWords, style all the elements

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
                 <input type="file" id="fileInput" required>
                 <label for="fileInput" class="custom-file-label"><i class="fa-solid fa-plus plus"></i></label>
                 <h3>Upload a file</h3>
+                <p>Here you can <span class="keyWords">upload</span> your files. They will be saved in our database for <span class="keyWords">one week</span>.</p>
                 <span id="fileName">No file chosen</span>
                 <button type="submit">Upload file</button>
             </form>
