add the file saving description and keyWords, style all the elements

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
                 <h3>Save a file</h3>
-
+                <p>Save <span class="keyWords">any file</span> from the database by just entering the 6-number <span class="keyWords">code</span>here!</p>
                 <input type="text" id="codeInput" placeholder="CODE">
 
                 <button type="submit">Download</button>
