fix the plus hover effect, unite the chosen file and button into 1 element to style them

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,11 @@
                 <label for="fileInput" class="custom-file-label"><i class="fa-solid fa-plus plus"></i></label>
                 <h3>Upload a file</h3>
                 <p>Here you can <span class="keyWords">upload</span> your files. They will be saved in our database for <span class="keyWords">one week</span>.</p>
-                <span id="fileName">No file chosen</span>
-                <button type="submit">Upload file</button>
+                <div class="fileInputCon">
+                    <span id="fileName">No file chosen</span>
+                    <button type="submit">Upload file</button>
+                </div>
+
             </form>
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
