style the code entering input and the file saving btn in the downloading form

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,11 @@
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
                 <h3>Save a file</h3>
                 <p>Save <span class="keyWords">any file</span> from the database by just entering the 6-number <span class="keyWords">code</span> here!</p>
-                <input type="text" id="codeInput" placeholder="CODE">
+                <div class="codeInputBtnCon">
+                    <input type="text" id="codeInput" placeholder="XXXXXX">
+                    <button type="submit">Save file</button>
+                </div>
 
-                <button type="submit">Download</button>
                 <p id="message"></p>
             </form>
         </div>
