add another message for file uploading and set it up

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,8 @@
                     <span id="fileName">No file chosen</span>
                     <button type="submit">Upload file</button>
                 </div>
+                <p id="UploadMessage"></p>
+
 
             </form>
             <form id="downloadForm">
