--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
                 <input type="file" id="fileInput" required>
                 <label for="fileInput" class="custom-file-label"><i class="fa-solid fa-plus plus"></i></label>
                 <h3>Upload a file</h3>
-                <p>Here you can <span class="keyWords">upload</span> your files. They will be saved in our database for <span class="keyWords">one week</span>.</p>
+                <p>Here you can <span class="keyWords uploadForm_keyWords">upload</span> your files. They will be saved in our database for <span class="keyWords uploadForm_keyWords">one week</span>.</p>
                 <div class="fileInputCon">
                     <span id="fileName">No file chosen</span>
                     <button type="submit">Upload file</button>
