--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 <p>Here you can <span class="keyWords uploadForm_keyWords">upload</span> your files. They will be saved in our database for <span class="keyWords uploadForm_keyWords">one week</span>.</p>
                 <div class="fileInputCon">
                     <span id="fileName">No file chosen</span>
-                    <button type="submit">Upload file</button>
+                    <button type="submit" class="uploadFile">Upload file</button>
                 </div>
                 <p id="UploadMessage"></p>
 
@@ -58,7 +58,7 @@
                 <p>Save <span class="keyWords">any file</span> from the database by just entering the 6-number <span class="keyWords">code</span> here!</p>
                 <div class="codeInputBtnCon">
                     <input type="text" id="codeInput" placeholder="XXXXXX">
-                    <button type="submit">Save file</button>
+                    <button type="submit" class="saveFile">Save file</button>
                 </div>
 
                 <p id="message"></p>
