create all the basic language changing struncture

--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,11 @@
             <div class="logo">SHERET</div>
             <div class="languageThemeCon">
                 <select id="languageChanger">
-                    <option value="Eng">Eng.</option>
+                    <option value="Eng" selected>Eng.</option>
                     <option value="Ukr">Ukr.</option>
-                    <option value="Ukr">Fr.</option>
+                    <option value="Jap">Jap.</option>
+                    <option value="Fr">Fr.</option>
+                    <option value="Pol">Pol.</option>
                 </select>
                 <div class="themeChanger">
                     <div class="themeChanger_circle"></div>
@@ -36,7 +38,7 @@
         <div class="info">
             <div class="title">SHERET:</div>
             <div class="underline"></div>
-            <div class="subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
+            <div class="subtitle language-subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
         </div>
         <div class="forms">
             <form id="uploadForm">
