fix the language changing function bug

--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,11 @@
             <div class="logo">SHERET</div>
             <div class="languageThemeCon">
                 <select id="languageChanger">
-                    <option value="Eng" selected>Eng.</option>
-                    <option value="Ukr">Ukr.</option>
-                    <option value="Jap">Jap.</option>
-                    <option value="Fr">Fr.</option>
-                    <option value="Pol">Pol.</option>
+                    <option value="en" selected>Eng.</option>
+                    <option value="ukraine">Ukr.</option>
+                    <option value="japan">Jap.</option>
+                    <option value="france">Fr.</option>
+                    <option value="poland">Pol.</option>
                 </select>
                 <div class="themeChanger">
                     <div class="themeChanger_circle"></div>
