--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
         </header>
         <div class="info">
             <div class="title">SHERET:</div>
-            <div class="underline"></div>
+            <div class="underline_container">
+                <div class="underline"></div>
+            </div>
             <div class="subtitle language-subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
         </div>
         <div class="forms">
