display the files in the database amount

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
                 <div class="underline"></div>
             </div>
             <div class="subtitle language-subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
+            <div class="amount language-amount">Total files in the database: <div class="amount_number"></div></div>
         </div>
         <div class="forms">
             <form id="uploadForm">
@@ -53,8 +54,6 @@
                     <button type="submit" class="uploadFile language-uploadFile">Upload file</button>
                 </div>
                 <p id="UploadMessage"></p>
-
-
             </form>
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
