display the files in the database amount in the save section

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,6 @@
                 <div class="underline"></div>
             </div>
             <div class="subtitle language-subtitle">Forget about all the file sharing services you’ve used before! Quick, high quality, clean, suitable and understandable  solution is just ahead of you!</div>
-            <div class="amount language-amount">Total files in the database: <div class="amount_number"></div></div>
         </div>
         <div class="forms">
             <form id="uploadForm">
@@ -58,11 +57,12 @@
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
                 <h3 class="language-save">Save a file</h3>
-                <p class="language-saveDescription">Save <span class="keyWords">any file</span> from the database by just entering the 6-number <span class="keyWords">code</span> here!</p>
+                <p class="language-saveDescription"></p>
                 <div class="codeInputBtnCon">
                     <input type="text" id="codeInput" placeholder="XXXXXX">
                     <button type="submit" class="saveFile language-saveFile">Save file</button>
                 </div>
+                
 
                 <p id="message"></p>
             </form>
