add the text with the amount correct translation

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             <form id="downloadForm">
                 <div class="downloadForm_icon"><i class="fa-solid fa-cloud-arrow-down cloud"></i></div>
                 <h3 class="language-save">Save a file</h3>
-                <p class="language-saveDescription"></p>
+                <p class="language-saveDescription">Save <span class="keyWords">any file</span> from the database which already has <span class="keyWords amount_number"></span> files saved!</p>
                 <div class="codeInputBtnCon">
                     <input type="text" id="codeInput" placeholder="XXXXXX">
                     <button type="submit" class="saveFile language-saveFile">Save file</button>
