--- a/public/index.html
+++ b/public/index.html
@@ -69,5 +69,7 @@
         </div>
     </div>
     <script src="./main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.11/clipboard.min.js"></script>
+
 </body>
 </html>
